pre-reserva state bug fixed, stateReport scrollbar bug fixed

--- a/src/components/stateReport/StateReport.scss
+++ b/src/components/stateReport/StateReport.scss
@@ -32,7 +32,7 @@
         display: flex;
         flex-direction: column;
         width: 90%;
-        min-height: 400px;
+        min-height: 430px;
         overflow: hidden;
         opacity: 0;
         transition: opacity 0.5s ease-in-out;
@@ -110,7 +110,7 @@
             .event-section {
                 overflow-y: auto;
                 padding: 10px;
-                min-height: 370px;
+                height: 400px;
 
                 .filter-container {
                     background-color: aliceblue;
